clusters/proxmox-home/apps/llm-itmo/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: math-llm
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4.29
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: workspace
              mountPath: /workspace
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongodb-data-pvc
        - name: workspace
          persistentVolumeClaim:
            claimName: workspace-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: math-llm
  labels:
    app: mongo
spec:
  type: LoadBalancre
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: mongo
      protocol: TCP
      name: mongo
