clusters/proxmox-home/apps/llm-itmo/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: math-llm
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/mathai-itmo/llmath-backend:latest
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 5000
              protocol: "TCP"
          resources:
            limits:
              cpu: 1000m
              memory: 1G
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: math-llm
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 5000
      targetPort: "http"
      protocol: "TCP"
  selector:
    app.kubernetes.io/name: backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: math-llm
  name: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://math-llm.dev.mgsds.com"

  labels:
    app.kubernetes.io/component: "ingress"
    app.kubernetes.io/name: "backend"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  math-llm-back.dev.mgsds.com
    secretName: math-llm-back.dev.mgsds.com-tls
  rules:
  - host:  math-llm-back.dev.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
