clusters/proxmox-home/apps/llm-itmo/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: math-llm
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/mathai-itmo/llmath-sandbox-webui:latest
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 3000
              protocol: "TCP"
          resources:
            limits:
              cpu: 1000m
              memory: 1G
            requests:
              cpu: 10m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: math-llm
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 3000
      targetPort: "http"
      protocol: "TCP"
  selector:
    app.kubernetes.io/name: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: math-llm
  name: frontend-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: admin
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  labels:
    app.kubernetes.io/component: "ingress"
    app.kubernetes.io/name: "frontend"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  math-llm.dev.mgsds.com
    secretName: math-llm.dev.mgsds.com-tls
  rules:
  - host:  math-llm.dev.mgsds.com
    http:
      paths:
      - path: /statistics
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /llmath-problems
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: math-llm
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: "ingress"
    app.kubernetes.io/name: "frontend"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  math-llm.dev.mgsds.com
    secretName: math-llm.dev.mgsds.com-tls
  rules:
  - host:  math-llm.dev.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
